# actions-study

./: .dockerignore  .gitignore  CICD_LEARNING.md  Dockerfile  README.md  TRAEFIK_LEARNING.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: health.py  home.py  router.py
app/core/: config.py
app/schemas/: health.py
nginx-example/: docker-compose.internal.yaml  docker-compose.yaml  nginx.conf  nginx.internal.conf
tests/: test_health.py
